<resources>
    <string name="app_name">project_2</string>
    
    <string name="menu_profile">Profile</string>
    <string name="menu_main">Main</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_music">Music</string>
    <string name="menu_pictures">Pictures</string>

    <string name="fragment_profile">Profile Fragment</string>
    <string name="fragment_main">Main Fragment</string>
    <string name="fragment_music">Music Fragment</string>
    <string name="fragment_pictures">Pictures Fragment</string>
    <string name="fragment_search">Search Fragment</string>
    <string name="fragment_settings">Settings Fragment</string>

    <string name="button_navigate">Navigate to search</string>
</resources>