<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_main"
        android:title="@string/menu_main"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_profile"
        android:title="@string/menu_profile"/>
    <item
        android:id="@+id/musicFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_music"
        android:title="@string/menu_music"/>
    <item
        android:id="@+id/picturesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_pictures"
        android:title="@string/menu_pictures"/>
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings"
        android:title="@string/menu_settings"/>
</menu>